--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -166,11 +166,19 @@ jobs:
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
 
+    - name: list disk space
+      run: |
+        df -hT $PWD
+
     - name: Delete workflow runs
       uses: Mattraks/delete-workflow-runs@main
       with:
         retain_days: 0
         keep_minimum_runs: 2
+
+    - name: list disk space
+      run: |
+        df -hT $PWD
 
     #- name: Remove old Releases
     #  uses: dev-drprasad/delete-older-releases@master
