--- a/.github/workflows/immortalwrt-builder.yml
+++ b/.github/workflows/immortalwrt-builder.yml
@@ -105,9 +105,10 @@ jobs:
       run: |
         [ -e files ] && mv files openwrt/files
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
-        chmod +x $DIY_P2_SH
-        cd openwrt
-        $GITHUB_WORKSPACE/$DIY_P2_SH
+        # for lede openwrt use
+        # chmod +x $DIY_P2_SH
+        # cd openwrt
+        # $GITHUB_WORKSPACE/$DIY_P2_SH
 
     - name: Download package
       id: package
