--- a/immortalwrt_x86_64.config
+++ b/immortalwrt_x86_64.config
@@ -11,7 +11,7 @@ CONFIG_GNUTLS_HEARTBEAT=y
 CONFIG_GNUTLS_OCSP=y
 CONFIG_GNUTLS_PSK=y
 # CONFIG_GRUB_CONSOLE is not set
-CONFIG_GRUB_TITLE="IMMORTALWRT Compile by Linpc"
+CONFIG_GRUB_TITLE="IMMORTALWRT Compile by Yingziwo"
 # CONFIG_JSON_OVERVIEW_IMAGE_INFO is not set
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
