--- a/.github/workflows/openwrt-builder.yml
+++ b/.github/workflows/openwrt-builder.yml
@@ -106,7 +106,7 @@ jobs:
         cd openwrt
         make defconfig
         make download -j8
-        rm -rf package/feeds/packages/tini     # 2024.09.13再编译时，它报错，删除再试
+        rm -rf package/feeds/packages/tini     # 2024.09.13再编译时，它报错，删除再试。之前的编译在参数都相同的情况下没有报错
         find dl -size -1024c -exec ls -l {} \;
         find dl -size -1024c -exec rm -f {} \;
 
