--- a/.github/workflows/official_openwrt-builder.yml
+++ b/.github/workflows/official_openwrt-builder.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: official openwrt v22.03 build
+name: official openwrt v23.05 build
 
 on:
   repository_dispatch:
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/openwrt/openwrt
-  REPO_BRANCH: openwrt-22.03
+  REPO_BRANCH: openwrt-23.05
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: official_openwrt.config
   DIY_P1_SH: diy-official_openwrt1.sh
@@ -110,9 +110,9 @@ jobs:
         find dl -size -1024c -exec rm -f {} \;
         pwd
         ls -la
-        rm -rf package/yingziwo/v2ray-plugin    #编译中报错，去除24.09.13
-        rm -rf package/yingziwo/xray-core
-        rm -rf package/yingziwo/v2ray-plugin
+        #rm -rf package/yingziwo/v2ray-plugin    #编译中报错，去除24.09.13
+        #rm -rf package/yingziwo/xray-core
+        #rm -rf package/yingziwo/v2ray-plugin
 
     - name: Compile the firmware
       id: compile
