--- a/.github/workflows/official_openwrt-builder.yml
+++ b/.github/workflows/official_openwrt-builder.yml
@@ -110,7 +110,7 @@ jobs:
         find dl -size -1024c -exec rm -f {} \;
         pwd
         ls -la
-        #rm -rf package/yingziwo/v2ray-plugin    #编译中报错，去除24.09.13
+        rm -rf package/yingziwo/v2ray-plugin    #编译中报错，去除24.09.13
         #rm -rf package/yingziwo/xray-core
         #rm -rf package/yingziwo/v2ray-plugin
 
