--- a/.github/workflows/official_openwrt-builder.yml
+++ b/.github/workflows/official_openwrt-builder.yml
@@ -119,7 +119,7 @@ jobs:
       run: |
         cd openwrt
         echo -e "$(nproc) thread compile"
-        make -j$(nproc) || make -j1 || make -j1 V=s
+        make -j1 V=s                       # -j$(nproc) || make -j1 || make -j1 V=s #去掉三步走，先-j$(nproc) ，失败再make -j1，不行再make -j1 V=s 的步骤，直接make -j1 V=s
         echo "status=success" >> $GITHUB_OUTPUT
         grep '^CONFIG_TARGET.*DEVICE.*=y' .config | sed -r 's/.*DEVICE_(.*)=y/\1/' > DEVICE_NAME
         [ -s DEVICE_NAME ] && echo "DEVICE_NAME=_$(cat DEVICE_NAME)" >> $GITHUB_ENV
