--- a/.github/workflows/official_openwrt-builder.yml
+++ b/.github/workflows/official_openwrt-builder.yml
@@ -93,7 +93,7 @@ jobs:
       run: cd openwrt && ./scripts/feeds install -a
 
     - name: 更换go版本到default的23.x
-       run：|
+      run: |
          cd openwrt
          rm -rf feeds/packages/lang/golang
          git clone https://github.com/sbwml/packages_lang_golang -b 23.x feeds/packages/lang/golang
