--- a/official_openwrt.config
+++ b/official_openwrt.config
@@ -158,7 +158,7 @@ CONFIG_PACKAGE_luci-app-netdata=y
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-openclash=y
 #CONFIG_PACKAGE_luci-app-openvpn-server is not set
-CONFIG_PACKAGE_luci-app-passwall=y
+#CONFIG_PACKAGE_luci-app-passwall is not set
 CONFIG_PACKAGE_luci-app-passwall_Iptables_Transparent_Proxy=y
 # CONFIG_PACKAGE_luci-app-qbittorrent_dynamic is not set
 # CONFIG_PACKAGE_luci-app-qbittorrent_static is not set
@@ -183,7 +183,7 @@ CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn is not set     #编译中报错，去除于24.09.13
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn is not set
-CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
+#CONFIG_PACKAGE_luci-i18n-passwall-zh-cn is not set
 #CONFIG_PACKAGE_luci-i18n-qos-zh-cn is not set
 #CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn is not set
 #CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn is not set
