--- a/lienol.config
+++ b/lienol.config
@@ -9,7 +9,7 @@ CONFIG_DOCKER_STO_EXT4=y
 # CONFIG_GRUB_CONSOLE is not set
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_TIMEOUT="3"
-CONFIG_GRUB_TITLE="LEDE Compile by Yingziwo"
+CONFIG_GRUB_TITLE="Lienol-Wrt Compile by Yingziwo"
 CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
