--- a/.github/workflows/lienol-builder.yml
+++ b/.github/workflows/lienol-builder.yml
@@ -30,7 +30,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-lastest   #ubuntu-22.04
+    runs-on: ubuntu-latest   #ubuntu-22.04
 
     steps:
     - name: Checkout
