--- a/.github/workflows/lienol-builder.yml
+++ b/.github/workflows/lienol-builder.yml
@@ -93,6 +93,12 @@ jobs:
     - name: Install feeds
       run: cd openwrt && ./scripts/feeds install -a
 
+    - name: 更换go版本到default的23.x
+      run: |
+         cd openwrt
+         rm -rf feeds/packages/lang/golang
+         git clone https://github.com/sbwml/packages_lang_golang -b 23.x feeds/packages/lang/golang
+
     - name: Load custom configuration
       run: |
         [ -e files ] && mv files openwrt/files
