--- a/lienol.config
+++ b/lienol.config
@@ -351,7 +351,7 @@ CONFIG_SAMBA4_SERVER_WSDD2=y
 # CONFIG_PACKAGE_lucky is not set# This is an empty file, please overwrite it after generating the .config file with the source code
 
 # 防火墙改版本3配置。openwrt23.05缺省的防火墙是工作在firewall4上，而Lienol-wrt的内核工作在5.15上，这样出现了防火墙工作在版本4上，但规则却在版本3，出现矛盾，因此这里强制让openwrt工作在版本3上
-CONFIG_PACKAGE_firewall=y
-# CONFIG_PACKAGE_firewall4 is not set
+# CONFIG_PACKAGE_firewall is not set
+CONFIG_PACKAGE_firewall4=y
 
-# CONFIG_PACKAGE_libreswan-iptables is not set
+# CONFIG_PACKAGE_libreswan-nftables is not set
