--- a/.github/workflows/lienol-buider-kernel6.1.111.yml
+++ b/.github/workflows/lienol-buider-kernel6.1.111.yml
@@ -80,9 +80,11 @@ jobs:
         git clone $REPO_URL -b $REPO_BRANCH openwrt
         ln -sf /workdir/openwrt $GITHUB_WORKSPACE/openwrt
         cd openwrt
+        ls -al include
         #git checkout f68dcce3bb2a5d1043db7282809ef9b197dec99a   #指定内核到kernel6.1分支上,这个分支没有和目录include目录下以kernel-6.1文件中的LINUX_KERNEL_HASH-6.1.109 =值一样，若要用这个分支编译，必须更改kernel-6.1的内容。 
-        git checkout fe4573ab07e019e0af4ec5cfff508a5177638639
-        sed -i 's/\(KERNEL_PATCHVER: *= *\).*/\16.1/' target/linux/x86/Makefile         #内核编译文件Makefile版本指定到6.1上
+        git checkout 85161b432f7b72f56063125e79f8c95792c3290e    # 改6.6.52      这个6.1.109 fe4573ab07e019e0af4ec5cfff508a5177638639
+        cat target/linux/x86/Makefile
+        sed -i 's/\(KERNEL_PATCHVER: *= *\).*/\16.6/' target/linux/x86/Makefile         #内核编译文件Makefile版本指定到6.1上
         
 
     - name: Load custom feeds
@@ -117,6 +119,7 @@ jobs:
       run: |
         cd openwrt
         cat target/linux/x86/Makefile       #检查显示编译前的内核版本情况设置是否变化
+        ls -al include
         make defconfig
         make download -j8
         find dl -size -1024c -exec ls -l {} \;
