--- a/lienol.config
+++ b/lienol.config
@@ -350,7 +350,24 @@ CONFIG_SAMBA4_SERVER_WSDD2=y
 # CONFIG_PACKAGE_luci-i18n-lucky-zh-cn is not set
 # CONFIG_PACKAGE_lucky is not set# This is an empty file, please overwrite it after generating the .config file with the source code
 
-# 防火墙改版本3配置。openwrt23.05缺省的防火墙是工作在firewall4上，而Lienol-wrt的内核工作在5.15上，这样出现了防火墙工作在版本4上，但规则却在版本3，出现矛盾，因此这里强制让openwrt工作在版本3上
+# 屏蔽与passwall & openclash & helloworld(ssr-plus) 冲突的dnsmasq，启用功能更屌的dnsmasq-full
+CONFIG_PACKAGE_ca-bundle=y
+# CONFIG_PACKAGE_ca-certificates is not set
+# CONFIG_PACKAGE_dnsmasq is not set
+# CONFIG_PACKAGE_dnsmasq-dhcpv6 is not set
+CONFIG_PACKAGE_dnsmasq-full=y
+CONFIG_PACKAGE_dnsmasq_full_dhcp=y
+CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
+CONFIG_PACKAGE_dnsmasq_full_dnssec=y
+CONFIG_PACKAGE_dnsmasq_full_auth=y
+# CONFIG_PACKAGE_dnsmasq_full_ipset is not set
+CONFIG_PACKAGE_dnsmasq_full_nftset=y
+CONFIG_PACKAGE_dnsmasq_full_conntrack=y
+CONFIG_PACKAGE_dnsmasq_full_noid=y
+# CONFIG_PACKAGE_dnsmasq_full_broken_rtc is not set
+CONFIG_PACKAGE_dnsmasq_full_tftp=y
+
+# 防火墙改版本3配置。openwrt23.05缺省的防火墙是工作在firewall4上，而Lienol-wrt的内核工作在5.15上，这样出现了防火墙工作在版本4上，但规则却在版本3，出现矛盾，因此这里强制让openwrt工作在版本3上，内核在6.0以上情况正常，下面是启用fw4版本的配置
 # CONFIG_PACKAGE_firewall is not set
 CONFIG_PACKAGE_firewall4=y
 
