--- a/.github/workflows/lienol-buider-kernel6.1.111.yml
+++ b/.github/workflows/lienol-buider-kernel6.1.111.yml
@@ -18,7 +18,7 @@ on:
 
 env:
   REPO_URL: https://github.com/Lienol/openwrt
-  REPO_BRANCH: 22.03   # main  23.05  22.03  21.02 19.07 employ 其中employ为项目默认项 
+  REPO_BRANCH: 23.05   # main  23.05  22.03  21.02 19.07 employ 其中employ为项目默认项 ,除23.05配ubunt22.04编译固件插件能正常工作，其余不是编译报错，就是固件的插件工作不正常。
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: lienol.config
   DIY_P1_SH: diy-lienol1.sh
@@ -30,7 +30,7 @@ env:
 
 jobs:
   build:
-    runs-on: ubuntu-latest   #ubuntu-22.04
+    runs-on: ubuntu-22.04                               #ubuntu-latest   #ubuntu-22.04
 
     steps:
     - name: Checkout
