--- a/lienol.config
+++ b/lienol.config
@@ -367,7 +367,29 @@ CONFIG_PACKAGE_dnsmasq_full_noid=y
 # CONFIG_PACKAGE_dnsmasq_full_broken_rtc is not set
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
 
+#---------上面的配置缺少dockerd的配置，固件出来没有设置管理界面
 CONFIG_PACKAGE_dockerd=y
+# CONFIG_DOCKER_CHECK_CONFIG is not set
+# CONFIG_DOCKER_CGROUP_OPTIONS is not set
+# CONFIG_DOCKER_OPTIONAL_FEATURES is not set
+
+#
+# Network
+#
+# CONFIG_DOCKER_NET_OVERLAY is not set
+# CONFIG_DOCKER_NET_MACVLAN is not set
+# CONFIG_DOCKER_NET_TFTP is not set
+# end of Network
+
+#
+# Storage
+#
+# CONFIG_DOCKER_STO_DEVMAPPER is not set
+# CONFIG_DOCKER_STO_EXT4 is not set
+# CONFIG_DOCKER_STO_BTRFS is not set
+# end of Storage
+
+##--------------------------------------------------
 
 # 防火墙改版本4配置。openwrt23.05缺省的防火墙是工作在firewall4上，而Lienol-wrt的内核工作在5.15上，这样出现了防火墙工作在版本4上，但规则却在版本3，出现矛盾，因此这里强制让openwrt工作在版本3上，内核在6.0以上情况正常，下面是启用fw4版本的配置
 # CONFIG_PACKAGE_firewall is not set
