--- a/lienol.config
+++ b/lienol.config
@@ -217,7 +217,7 @@ CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-lib-taskd=y
 CONFIG_PACKAGE_luci-lib-xterm=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
-CONFIG_PACKAGE_luci-theme-argone=y
+# CONFIG_PACKAGE_luci-theme-argone is not set
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_nano=y
 CONFIG_PACKAGE_netdata=y
