--- a/.github/workflows/official_openwrt-builder.yml
+++ b/.github/workflows/official_openwrt-builder.yml
@@ -188,7 +188,7 @@ jobs:
           - 💻 平台架构: x86_64                        
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🚀 内核版本:  K6.6.x                              
+          - 🚀 内核版本:  K5.15                              
           - 🌐 默认地址: 192.168.1.1
           - 🔑 默认密码: 空                
            
