--- a/.github/workflows/lienol-buider-kernel6.1.111.yml
+++ b/.github/workflows/lienol-buider-kernel6.1.111.yml
@@ -186,6 +186,32 @@ jobs:
         tag_name: ${{ steps.tag.outputs.release_tag }}
         body_path: release.txt
         files: ${{ env.FIRMWARE }}/*
+        body: |
+          ===Firmware for x86_64===
+          ### 📒 固件信息
+          - 💻 平台架构: x86_64                        
+          - ⚽ 固件源码: ${{ env.REPO_URL }}
+          - 💝 源码分支: ${{ env.REPO_BRANCH }}
+          - 🚀 内核版本:  K5.15.167                              
+          - 🌐 默认地址: 192.168.1.1
+          - 🔑 默认密码: 空                
+           
+          ### 📒 插件列表:
+          ```
+          DockerMan
+          iStore
+          KMS server
+          Openclash
+          Passwall
+          AdguardHome
+          AutoTimeCtl
+          NAS
+          OpenVPN server
+          ZeroTier
+          Upnp
+          ...
+          
+          
 
     - name: list disk space
       run: |
