--- a/lienol.config
+++ b/lienol.config
@@ -396,3 +396,10 @@ CONFIG_PACKAGE_firewall=y
 # CONFIG_PACKAGE_firewall4 is not set
 
 # CONFIG_PACKAGE_libreswan-iptables is not set
+
+## --------wireguard-------------
+CONFIG_PACKAGE_kmod-wireguard=y
+# CONFIG_PACKAGE_rpcd-mod-wireguard is not set
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_wireguard-tools=y
+
