--- a/official_openwrt.config
+++ b/official_openwrt.config
@@ -5019,7 +5019,7 @@ CONFIG_PACKAGE_luci-app-wol=y
 
 CONFIG_GRUB_TITLE="OpenWrt Compile by Yingziwo"
 CONFIG_PACKAGE_luci-app-adguardhome=y
-CONFIG_PACKAGE_luci-app-argone-config=y
+# CONFIG_PACKAGE_luci-app-argone-config is not set   #official-openwrt23.5下不支持
 CONFIG_PACKAGE_luci-app-autotimeset=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
@@ -5035,7 +5035,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 CONFIG_PACKAGE_luci-app-store=y
 
 CONFIG_PACKAGE_luci-i18n-adguardhome-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-argone-config-zh-cn is not set
 CONFIG_PACKAGE_luci-i18n-autotimeset-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
