--- a/lienol.config
+++ b/lienol.config
@@ -373,6 +373,15 @@ CONFIG_PACKAGE_dockerd=y
 # CONFIG_DOCKER_CGROUP_OPTIONS is not set
 # CONFIG_DOCKER_OPTIONAL_FEATURES is not set
 
+# 4. Themes 
+#
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_luci-theme-openwrt is not set
+# CONFIG_PACKAGE_luci-theme-openwrt-2020 is not set
+# end of 4. Themes
+
+
 #
 # Network
 #
