--- a/lienol.config
+++ b/lienol.config
@@ -10,6 +10,15 @@ CONFIG_DOCKER_STO_EXT4=y
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_TIMEOUT="3"
 CONFIG_GRUB_TITLE="Lienol-Wrt Compile by Yingziwo"
+
+# 4. Themes 
+#
+CONFIG_PACKAGE_luci-theme-bootstrap=y
+CONFIG_PACKAGE_luci-theme-material=y
+# CONFIG_PACKAGE_luci-theme-openwrt is not set
+# CONFIG_PACKAGE_luci-theme-openwrt-2020 is not set
+# end of 4. Themes
+
 CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
@@ -62,7 +71,6 @@ CONFIG_PACKAGE_coreutils-stat=y
 CONFIG_PACKAGE_coreutils-stty=y
 CONFIG_PACKAGE_coreutils-timeout=y
 CONFIG_PACKAGE_docker=y
-CONFIG_PACKAGE_dockerd=y
 CONFIG_PACKAGE_fuse-utils=y
 CONFIG_PACKAGE_haproxy=y
 CONFIG_PACKAGE_hd-idle=y
@@ -373,15 +381,6 @@ CONFIG_PACKAGE_dockerd=y
 # CONFIG_DOCKER_CGROUP_OPTIONS is not set
 # CONFIG_DOCKER_OPTIONAL_FEATURES is not set
 
-# 4. Themes 
-#
-CONFIG_PACKAGE_luci-theme-bootstrap=y
-CONFIG_PACKAGE_luci-theme-material=y
-# CONFIG_PACKAGE_luci-theme-openwrt is not set
-# CONFIG_PACKAGE_luci-theme-openwrt-2020 is not set
-# end of 4. Themes
-
-
 #
 # Network
 #
@@ -401,10 +400,10 @@ CONFIG_PACKAGE_luci-theme-material=y
 ##--------------------------------------------------
 
 # 防火墙改版本3配置。openwrt23.05缺省的防火墙是工作在firewall4上，而Lienol-wrt的内核工作在5.15上，这样出现了防火墙工作在版本4上，但规则却在版本3，出现矛盾，因此这里强制让openwrt工作在版本3上，内核在6.0以上情况正常，下面是启用fw4版本的配置
-CONFIG_PACKAGE_firewall=y 
-# CONFIG_PACKAGE_firewall4 is not set
+CONFIG_PACKAGE_firewall4=y 
+# CONFIG_PACKAGE_firewall is not set
 
-# CONFIG_PACKAGE_libreswan-iptables is not set
+# CONFIG_PACKAGE_libreswan-nftables is not set
 
 ## --------wireguard-------------
 CONFIG_PACKAGE_kmod-wireguard=y
