--- a/.config
+++ b/.config
@@ -9,7 +9,7 @@ CONFIG_DOCKER_STO_EXT4=y
 # CONFIG_GRUB_CONSOLE is not set
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_TIMEOUT="3"
-CONFIG_GRUB_TITLE="LEDE Compile by Yingziwo"
+CONFIG_GRUB_TITLE="Lede'Wrt Compile by Yingziwo"
 CONFIG_KERNEL_CFQ_GROUP_IOSCHED=y
 CONFIG_KERNEL_CGROUP_DEVICE=y
 CONFIG_KERNEL_CGROUP_FREEZER=y
@@ -153,8 +153,8 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_btrfs_progs=y
 CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 #CONFIG_PACKAGE_luci-app-hd-idle is not set
-CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-netdata=y
+# CONFIG_PACKAGE_luci-app-mosdns is not set
+# CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-openclash=y
 #CONFIG_PACKAGE_luci-app-openvpn-server is not set
@@ -194,8 +194,8 @@ CONFIG_PACKAGE_luci-lib-docker=y
 CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-argone=y
 CONFIG_PACKAGE_mount-utils=y
-CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_netdata=y
+#CONFIG_PACKAGE_nano is not set
+#CONFIG_PACKAGE_netdata is not set
 # CONFIG_PACKAGE_nlbwmon is not set
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
@@ -234,7 +234,7 @@ CONFIG_PACKAGE_tc-tiny=y
 CONFIG_PACKAGE_tini=y
 CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_trojan-plus=y
-CONFIG_PACKAGE_ttyd=y
+# CONFIG_PACKAGE_ttyd is not set
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_v2dat=y
 CONFIG_PACKAGE_v2ray-geoip=y
@@ -286,7 +286,7 @@ CONFIG_PACKAGE_libpopt=y
 CONFIG_PACKAGE_libtasn1=y
 CONFIG_PACKAGE_libtirpc=y
 CONFIG_PACKAGE_liburing=y
-CONFIG_PACKAGE_luci-app-samba4=y
+#CONFIG_PACKAGE_luci-app-samba4 is not set
 # CONFIG_PACKAGE_luci-i18n-samba4-ca is not set
 # CONFIG_PACKAGE_luci-i18n-samba4-cs is not set
 # CONFIG_PACKAGE_luci-i18n-samba4-de is not set
@@ -310,10 +310,10 @@ CONFIG_PACKAGE_luci-app-samba4=y
 # CONFIG_PACKAGE_luci-i18n-samba4-tr is not set
 # CONFIG_PACKAGE_luci-i18n-samba4-uk is not set
 # CONFIG_PACKAGE_luci-i18n-samba4-vi is not set
-CONFIG_PACKAGE_luci-i18n-samba4-zh-cn=y
+# CONFIG_PACKAGE_luci-i18n-samba4-zh-cn is not set
 # CONFIG_PACKAGE_luci-i18n-samba4-zh-tw is not set
-CONFIG_PACKAGE_samba4-libs=y
-CONFIG_PACKAGE_samba4-server=y
+# CONFIG_PACKAGE_samba4-libs is not set
+# CONFIG_PACKAGE_samba4-server nos set
 CONFIG_PACKAGE_wsdd2=y
 # CONFIG_SAMBA4_SERVER_AD_DC is not set
 CONFIG_SAMBA4_SERVER_AVAHI=y
