--- a/.config
+++ b/.config
@@ -154,7 +154,7 @@ CONFIG_PACKAGE_luci-app-diskman_INCLUDE_lsblk=y
 CONFIG_PACKAGE_luci-app-dockerman=y
 #CONFIG_PACKAGE_luci-app-hd-idle is not set
 CONFIG_PACKAGE_luci-app-mosdns=y
-CONFIG_PACKAGE_luci-app-netdata=y
+##CONFIG_PACKAGE_luci-app-netdata is not set
 # CONFIG_PACKAGE_luci-app-nlbwmon is not set
 CONFIG_PACKAGE_luci-app-openclash=y
 #CONFIG_PACKAGE_luci-app-openvpn-server is not set
@@ -181,7 +181,7 @@ CONFIG_PACKAGE_luci-i18n-diskman-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-dockerman-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-hd-idle-zh-cn is not set
 CONFIG_PACKAGE_luci-i18n-mosdns-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-netdata-zh-cn=y
+##CONFIG_PACKAGE_luci-i18n-netdata-zh-cn is not set
 #CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn is not set
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 #CONFIG_PACKAGE_luci-i18n-qos-zh-cn is not set
@@ -195,7 +195,7 @@ CONFIG_PACKAGE_luci-proto-ipv6=y
 CONFIG_PACKAGE_luci-theme-argone=y
 CONFIG_PACKAGE_mount-utils=y
 CONFIG_PACKAGE_nano=y
-CONFIG_PACKAGE_netdata=y
+##CONFIG_PACKAGE_netdata is not set
 # CONFIG_PACKAGE_nlbwmon is not set
 CONFIG_PACKAGE_odhcp6c=y
 CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
@@ -321,6 +321,10 @@ CONFIG_SAMBA4_SERVER_NETBIOS=y
 CONFIG_SAMBA4_SERVER_VFS=y
 # CONFIG_SAMBA4_SERVER_VFSX is not set
 CONFIG_SAMBA4_SERVER_WSDD2=y
+CONFIG_PACKAGE_kmod-wireguard=y
+# CONFIG_PACKAGE_rpcd-mod-wireguard is not set
+CONFIG_PACKAGE_luci-proto-wireguard=y
+CONFIG_PACKAGE_wireguard-tools=y
 # CONFIG_PACKAGE_luci-app-lucky is not set
 # CONFIG_PACKAGE_luci-i18n-lucky-zh-cn is not set
 # CONFIG_PACKAGE_lucky is not set# This is an empty file, please overwrite it after generating the .config file with the source code
