--- a/.config
+++ b/.config
@@ -325,6 +325,8 @@ CONFIG_PACKAGE_kmod-wireguard=y
 # CONFIG_PACKAGE_rpcd-mod-wireguard is not set
 CONFIG_PACKAGE_luci-proto-wireguard=y
 CONFIG_PACKAGE_wireguard-tools=y
+CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 # CONFIG_PACKAGE_luci-app-lucky is not set
 # CONFIG_PACKAGE_luci-i18n-lucky-zh-cn is not set
 # CONFIG_PACKAGE_lucky is not set# This is an empty file, please overwrite it after generating the .config file with the source code
