--- a/lede-jingjian.config
+++ b/lede-jingjian.config
@@ -35,6 +35,8 @@ CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
 # CONFIG_DEFAULT_luci-app-vlmcsd is not set
 # CONFIG_DEFAULT_luci-app-upnp is not set
 # CONFIG_DEFAULT_luci-app-wol is not set
+# CONFIG_PACKAGE_luci-app-wol is not set
+# CONFIG_PACKAGE_luci-i18n-wol-zh-cn is not set
 ####################################################################
 CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
 CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
