--- a/lede-jingjian.config
+++ b/lede-jingjian.config
@@ -34,9 +34,9 @@ CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
 ###########去掉缺省的一下插件############KVM激活服务器；upnp服务;网络唤醒
 # CONFIG_DEFAULT_luci-app-vlmcsd is not set
 # CONFIG_DEFAULT_luci-app-upnp is not set
-# CONFIG_DEFAULT_luci-app-wol is not set
-# CONFIG_PACKAGE_luci-app-wol is not set
-# CONFIG_PACKAGE_luci-i18n-wol-zh-cn is not set
+CONFIG_DEFAULT_luci-app-wol=y
+CONFIG_PACKAGE_luci-app-wol=y
+CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
 ####################################################################
 CONFIG_OPENVPN_openssl_ENABLE_DEF_AUTH=y
 CONFIG_OPENVPN_openssl_ENABLE_FRAGMENT=y
