--- a/lede-jingjian.config
+++ b/lede-jingjian.config
@@ -32,8 +32,8 @@ CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
 # CONFIG_OPENSSL_WITH_SEED is not set
 # CONFIG_OPENSSL_WITH_WHIRLPOOL is not set
 ###########去掉缺省的一下插件############KVM激活服务器；upnp服务;网络唤醒
-# CONFIG_DEFAULT_luci-app-vlmcsd is not set
-# CONFIG_DEFAULT_luci-app-upnp is not set
+CONFIG_DEFAULT_luci-app-vlmcsd=y
+CONFIG_DEFAULT_luci-app-upnp=y
 CONFIG_DEFAULT_luci-app-wol=y
 CONFIG_PACKAGE_luci-app-wol=y
 CONFIG_PACKAGE_luci-i18n-wol-zh-cn=y
