--- a/lede-jingjian.config
+++ b/lede-jingjian.config
@@ -31,7 +31,7 @@ CONFIG_KERNEL_TRANSPARENT_HUGEPAGE_ALWAYS=y
 # CONFIG_OPENSSL_WITH_MDC2 is not set
 # CONFIG_OPENSSL_WITH_SEED is not set
 # CONFIG_OPENSSL_WITH_WHIRLPOOL is not set
-###########去掉缺省的一下插件############KVM激活服务器；upnp服务;网络唤醒
+###########去掉缺省的一些插件-KVM激活服务器；upnp服务;网络唤醒###########
 #CONFIG_DEFAULT_luci-app-vlmcsd is not set
 #CONFIG_DEFAULT_luci-app-upnp is not set
 #CONFIG_DEFAULT_luci-app-wol is not set
