--- a/.github/workflows/lede-openwrt-builder.yml
+++ b/.github/workflows/lede-openwrt-builder.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: Lede OpenWrt Builder
+name: LedeJJ OpenWrt Builder
 
 on:
   repository_dispatch:
