--- a/.github/workflows/lede-tagSL-openwrt-builder.yml
+++ b/.github/workflows/lede-tagSL-openwrt-builder.yml
@@ -15,6 +15,24 @@ name: Lede tagSL OpenWrt Builder
 on:
   repository_dispatch:
   workflow_dispatch:
+     inputs:
+          tagSL:
+            description: "请选择lede版本:"
+            required: true
+            default: "master"
+            type: choice
+            options:
+              - "master"
+              - "20230609"
+              - "20221001"
+              - "20220716"
+              - "20220505"
+              - "20220401"
+              - "20211117"
+              - "20200915"
+              - "20200416"
+              - "20200408"
+              
 
 env:
   REPO_URL: https://github.com/coolsnowwolf/lede
