--- a/.github/workflows/lede-tagSL-openwrt-builder.yml
+++ b/.github/workflows/lede-tagSL-openwrt-builder.yml
@@ -39,7 +39,7 @@ env:
   REPO_BRANCH: ${{ github.event.client_payload.tagSL || github.event.inputs.tagSL }}
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: lede-jingjian.config
-  DIY_P1_SH: diy-ledejj-part1.sh
+  DIY_P1_SH: diy-ledeSL-part1.sh
   DIY_P2_SH: diy-part2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
