--- a/.github/workflows/lede-tagSL-openwrt-builder.yml
+++ b/.github/workflows/lede-tagSL-openwrt-builder.yml
@@ -168,6 +168,26 @@ jobs:
       if: env.UPLOAD_FIRMWARE == 'true' && !cancelled()
       run: |
         cd openwrt/bin/targets/*/*
+        if [ -n "$(ls *.img.gz)" ]; then
+            #echo "BD_COMPILE=success" >> $GITHUB_ENV
+            #echo "FIRMWARE_PATH=$PWD" >> $GITHUB_ENV
+            #echo "DATE=$(date +"%Y.%m.%d")" >> $GITHUB_ENV
+            KERNEL=$(cat *.manifest | awk '/^kernel/ {print $2}' | tr -d ' ')
+            echo "KERNEL=$KERNEL" >> $GITHUB_ENV
+            #Uppercase_String=$(echo "${{ env.BD_PROJECT }}" | tr '[:lower:]' '[:upper:]')
+            #echo "Uppercase_String=$Uppercase_String" >> $GITHUB_ENV
+            #tar -czvf packages.tar.gz packages
+            #rm -rf packages
+            echo "===========编译成功,准备上传==========="
+            send_message "编译成功,准备上传" "编译成功,准备上传"
+          else
+            #rm -f /home/runner/stop_signal
+            echo "===========编译失败,继续暂停==========="
+            #echo "BD_COMPILE=failure" >> $GITHUB_ENV
+            echo "KERNEL=failure" >> $GITHUB_ENV
+            #send_message "编译失败,继续暂停" "编译失败,继续暂停"
+            #return 1  # 返回非零值表示编译失败
+          fi
         rm -rf packages
         echo "FIRMWARE=$PWD" >> $GITHUB_ENV
         echo "status=success" >> $GITHUB_OUTPUT
@@ -203,7 +223,7 @@ jobs:
           - 💻 平台架构: x86_64 ( 32K 600M )                       
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🚀 内核版本:  K6.6.52                              
+          - 🚀 内核版本: ${{ env.KERNEL }}                  #K6.6.52                              
           - 🌐 默认地址: 192.168.4.10 
           - 🔑 默认密码: 空                
            
