--- a/.github/workflows/official_openwrt-builder.yml
+++ b/.github/workflows/official_openwrt-builder.yml
@@ -21,7 +21,7 @@ env:
   REPO_BRANCH: openwrt-23.05  # main --> kernel6.6-6.6.52 ; openwrt-23.05 --> kernel5.15-5.15.167 ; openwrt-22.03 --> kernel5.10-5.10.221 ; openwrt-21.02 --> kernel5.4-5.4.238 ; openwrt-19.07 --> kernel4.14-4.14.275 ; openwrt-18.06 --> kernel4.9-4.9.243 .
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: official_openwrt.config
-  DIY_P1_SH: diy-official_openwrt1.sh
+  DIY_P1_SH: diy-official-pw4.78-2-openwrt1.sh    #diy-official_openwrt1.sh
   DIY_P2_SH: diy-official_openwrt2.sh
   UPLOAD_BIN_DIR: false
   UPLOAD_FIRMWARE: true
