--- a/.github/workflows/lienol-buider-kernel6.1.111.yml
+++ b/.github/workflows/lienol-buider-kernel6.1.111.yml
@@ -154,7 +154,10 @@ jobs:
       run: |
         cd openwrt/bin/targets/*/*
         if [ -n "$(ls *.img.gz)" ]; then
-            echo "KERNEL=$(cat *.manifest | grep kernel | grep = -m 1 | cut -d= -f2 | cut -d- -f1)" >> $GITHUB_ENV
+            #echo "KERNEL=$(cat *.manifest | grep kernel | grep = -m 1 | cut -d= -f2 | cut -d- -f1)" >> $GITHUB_ENV
+            echo "KERNEL=$(cat *.manifest | grep ^kernel | cut -d- -f2 | tr -d ' ')" >> $GITHUB_ENV
+            KERNEL1=$(cat *.manifest | awk '/^kernel/ {print $2}' | tr -d ' ')
+            echo "KERNEL1=$KERNEL1" >> $GITHUB_ENV
             echo "===========编译成功,准备上传==========="
             
           else
@@ -201,7 +204,8 @@ jobs:
           - 💻 平台架构: x86_64                        
           - ⚽ 固件源码: ${{ env.REPO_URL }}
           - 💝 源码分支: ${{ env.REPO_BRANCH }}
-          - 🚀 内核版本: ${{ env.KERNEL }}                             
+          - 🚀 内核版本: ${{ env.KERNEL }}  
+          - 🚀 内核版本1: ${{ env.KERNEL1 }}
           - 🌐 默认地址: 192.168.1.1
           - 🔑 默认密码: 空                
            
