--- a/.github/workflows/lede-tagSL-builder-autoSLsystem.yml
+++ b/.github/workflows/lede-tagSL-builder-autoSLsystem.yml
@@ -10,7 +10,7 @@
 # See /LICENSE for more information.
 #
 
-name: Lede tagSL OpenWrt Builder
+name: Lede tagSL autoSLsystem OpenWrt Builder
 
 on:
   repository_dispatch:
